--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "maath": "^0.10.8",
     "motion": "^12.12.1",
     "react": "^19.1.0",
+    "react-confetti-explosion": "^3.0.3",
     "react-dom": "^19.1.0",
     "react-responsive": "^10.0.1",
     "tailwind-merge": "^3.3.0",
