--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "cobe": "^0.6.3",
+    "flipping-pages": "^3.1.0",
     "maath": "^0.10.8",
     "motion": "^12.12.1",
     "react": "^19.1.0",
     "react-confetti-explosion": "^3.0.3",
     "react-dom": "^19.1.0",
+    "react-pageflip": "^2.0.3",
     "react-responsive": "^10.0.1",
+    "react-tiny-popover": "^8.1.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "three": "^0.176.0"
