--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Force LF line endings for common source files
+*.js text eol=lf
+*.jsx text eol=lf
+*.ts text eol=lf
+*.tsx text eol=lf
+*.json text eol=lf
+*.css text eol=lf
+*.html text eol=lf
