--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-pageflip": "^2.0.3",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "7.8.2",
     "react-tiny-popover": "^8.1.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
