--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "7.8.2",
     "react-tiny-popover": "^8.1.6",
+    "resend": "^6.1.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "three": "^0.176.0"
